Public export of Nexus code:   - 0b2e021c64414ec81d5db4b29b2a77127650b01f by Damian Bradicich <dbradicich@sonatype.com>
GitOrigin-RevId: 0b2e021c64414ec81d5db4b29b2a77127650b01f